--- a/components/agility-pageModules/secondaryNav/secondaryNav.module.scss
+++ b/components/agility-pageModules/secondaryNav/secondaryNav.module.scss
@@ -11,9 +11,9 @@
   .nav {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    > * {
-      align-self: center;
+    align-items: center;
+    > div {
+      margin-top: 1rem;
     }
   }
 }
