--- a/components/layout/footer/footer.module.scss
+++ b/components/layout/footer/footer.module.scss
@@ -124,7 +124,9 @@
     }
     .trusteLinks {
       display: flex;
-      gap: 0.25rem;
+      a:not(:last-child) {
+        margin-right: 0.25rem;
+      }
       img {
         max-width: 6.625rem;
       }
