--- a/components/layout/globalMessage/globalMessage.module.scss
+++ b/components/layout/globalMessage/globalMessage.module.scss
@@ -11,7 +11,6 @@
     display: flex;
     flex-flow: column;
     align-items: center;
-    gap: 1rem;
     padding-top: 0.5rem;
     @include desktop() {
       padding-top: 0;
@@ -40,6 +39,7 @@
     top: 0;
     @include desktop() {
       position: relative;
+      margin-left: 1rem;
     }
     button {
       padding: 0.7rem 1.2rem;
