--- a/components/agility-pageModules/leadershipPageContent/leadershipPageContent.module.scss
+++ b/components/agility-pageModules/leadershipPageContent/leadershipPageContent.module.scss
@@ -3,27 +3,41 @@
 @import "../../../styles/settings/variables";
 
 .leadershipPageContent {
-  gap: 3rem;
+  $gap: 3rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  row-gap: $gap;
+  @include tablet() {
+    row-gap: 0;
+    display: flex;
+    flex-direction: row;
+  }
   .leader {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
+    flex-grow: 1;
     & > * {
       flex-basis: 50%;
     }
-
     p {
       &:first-of-type {
         font-size: $size-3;
         font-weight: 600;
       }
     }
-
+    @include tablet() {
+      margin-bottom: $gap;
+      + .leader {
+        margin-left: $gap;
+      }
+    }
     .leaderImage {
       position: relative;
       display: flex;
+      align-items: center;
       margin-bottom: 1rem;
       & > span {
         border-radius: 50%;
@@ -40,8 +54,6 @@
       }
       .leaderImageFilter {
         position: absolute;
-        top: 0;
-        left: 0;
         width: 100%;
         height: 100%;
         border-radius: 50%;
