--- a/components/agility-pageModules/heroImage/heroImage.module.scss
+++ b/components/agility-pageModules/heroImage/heroImage.module.scss
@@ -2,8 +2,8 @@
 
 .heroImage {
   width: 100%;
-  padding: unset;
-  height: 30vw;
+  padding: 2rem 0;
+  min-height: 30vw;
   overflow: hidden;
   position: relative;
   display: flex;
@@ -16,7 +16,6 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding-bottom: 1rem;
   }
   & > span {
     position: absolute !important;
@@ -40,6 +39,7 @@
     }
   }
   @include desktop() {
+    padding: unset;
     height: 100%;
     min-height: 21.25rem;
     overflow: hidden;
