--- a/components/layout/brandFooter/brandFooter.module.scss
+++ b/components/layout/brandFooter/brandFooter.module.scss
@@ -1,21 +1,40 @@
+@use "sass:math";
+@import "../../../styles/settings/mixins";
+@import "../../../styles/settings/colors";
+@import "../../../styles/settings/variables";
+
 .footer {
   color: black;
   position: relative;
   overflow: hidden;
-  width: 60%;
+  width:100%;
   margin: 0 auto;
   position:absolute;
   bottom:0;
-  left:20%;
+    @include desktop{
+    width: 60%;
+    left:20%;
+  }
     .logo {
-      margin-bottom:7rem;
+      margin-bottom:4rem;
+      @include desktop{
+        margin-bottom:7rem;
+      }
     }
     .textContainer {
-      span {
-      }
+      font-size:1rem;
+      align-items: center;
       width: 100%;
-      height: 2rem;
+      height: 4rem;
       display: flex;
-      justify-content: space-between;
+      flex-direction:column;
+     span{
+       line-height:1.7rem;
+     }
+      @include desktop{
+        flex-direction:row;
+        justify-content: space-between;
+        height:2rem;
+      }
     }
 }
