style: minor style adjustments

--- a/components/layout/brandFooter/brandFooter.module.scss
+++ b/components/layout/brandFooter/brandFooter.module.scss
@@ -9,11 +9,10 @@
   overflow: hidden;
   width:100%;
   margin: 0 auto;
-  position:absolute;
-  bottom:0;
+  padding: 12rem 0 3rem 0;
+  position: relative;
     @include desktop{
     width: 60%;
-    left:20%;
   }
     .logo {
       margin-bottom:4rem;
