--- a/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
+++ b/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
@@ -166,7 +166,7 @@
 
     div {
       &:only-child {
-        height: 100%;
+        /*         height: 100%; */
         width: 100%;
         display: flex;
         justify-content: center;
