--- a/styles/components/_video.scss
+++ b/styles/components/_video.scss
@@ -3,3 +3,21 @@
   max-width: 100vw;
   @include focus-visible-outline();
 }
+
+.unsupported-video {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  > div {
+    height: auto !important;
+    padding: 25% 2rem;
+    border: 0.2rem solid $color-gray;
+    border-radius: 0.5rem;
+    p {
+      text-align: center;
+      font-size: 1rem;
+      font-weight: 600;
+    }
+  }
+}
