--- a/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
+++ b/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
@@ -13,7 +13,7 @@
     height: 100%;
     & > span {
       &:only-child {
-        height: 100%;
+        height: 100% !important;
         display: block !important;
         img {
           object-fit: fill;
