--- a/components/layout/navbarSecondary/navbarSecondary.module.scss
+++ b/components/layout/navbarSecondary/navbarSecondary.module.scss
@@ -13,7 +13,7 @@
     }
     a {
       display: block;
-      padding: 0.5rem 0;
+      /* padding: 0.5rem 0; */
       margin-top: toRem(10);
       &:hover {
         color: $color-darkblue;
