--- a/components/horizontallyScrollableList/horizontallyScrollableList.module.scss
+++ b/components/horizontallyScrollableList/horizontallyScrollableList.module.scss
@@ -12,13 +12,14 @@
     overflow-x: scroll;
     scroll-behavior: smooth;
     scrollbar-width: none;
+    padding: 0;
     &::-webkit-scrollbar {
       display: none;
     }
     @include desktop() {
       overflow-x: visible;
     }
-    > div {
+    > li {
       padding: 0.75rem 0;
       display: flex;
       align-items: center;
