--- a/components/horizontallyScrollableList/horizontallyScrollableList.module.scss
+++ b/components/horizontallyScrollableList/horizontallyScrollableList.module.scss
@@ -61,11 +61,19 @@
       transform: translate(-25%, -50%) rotate(45deg);
       height: 0.5rem;
       width: 0.5rem;
-      border: 0.125rem solid;
-      border-color: transparent transparent black black;
+      border-color: $color-black;
+      border-style: solid;
+      border-width: 0 0 0.125rem 0.125rem ;
     }
     &:nth-of-type(2)::after {
       transform: translate(-75%, -50%) rotate(225deg);
+    }
+    &:disabled {
+      cursor: default;
+      pointer-events: none;
+      &::after {
+        border-color: $color-gray;
+      }
     }
     @include focus-visible-touch-outlines();
   }
