--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -247,7 +247,16 @@ input[type="number"]::-webkit-inner-spin-button {
   font-weight: 600;
   white-space: nowrap;
 }
-
+.simple-dark{
+  border: unset;
+  background: unset;
+  color: $color-navy;
+  padding: inherit;
+  text-decoration: none;
+  font-size: 1rem;
+  font-weight: 600;
+  white-space: nowrap;
+}
 /* This class is a wrapper that applies a standard typography for pure html content in 
 blog posts or anywhere where html is rendered */
 .content {
@@ -472,4 +481,21 @@ mark {
 
 .text-decoration-underline {
   text-decoration: underline;
+}
+
+//This class is used to wrap brand template content to apply brand spceific typography
+.brand {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: "DM Sans", sans-serif;
+  }
+  p {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+      Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+      "Segoe UI Symbol";
+  }
 }
