--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -493,7 +493,13 @@ mark {
   h6 {
     font-family: "DM Sans", sans-serif;
   }
+  h1{
+    font-size: 5.6vw;
+    font-size:6.55rem;
+    line-height:1;
+  }
   p {
+    font-size:1rem;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
       Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
       "Segoe UI Symbol";
