--- a/components/agility-pageModules/firstFold/firstFold.module.scss
+++ b/components/agility-pageModules/firstFold/firstFold.module.scss
@@ -73,6 +73,7 @@
     justify-content: center;
     align-items: flex-end;
     position: relative;
+    max-height: inherit;
     margin-top: 1rem;
     // Overflow fallback for Safari
     overflow: hidden;
