feat: added option to set media as background

--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -494,8 +494,10 @@ mark {
     font-family: "DM Sans", sans-serif;
   }
   h1{
-    font-size: 5.6vw;
-    font-size:6.55rem;
+    @include desktop{
+      font-size:6.55rem;
+    }
+    
     line-height:1;
   }
   p {
