--- a/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
+++ b/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
@@ -103,6 +103,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    &.backgroundPadding{
+      padding: 10% 0;
+    }
     &.textContentBasis30 {
       flex-basis: 30%;
     }
@@ -255,6 +258,31 @@
           border-radius: 50%;
         }
       }
+    }
+  }
+}
+.mediaBackgroundContainer{
+  position:relative;
+  overflow:hidden;
+  padding:0;
+  @include desktop{
+    min-height:65vh;
+    color:white;
+  }
+  
+  //Mobile view needs work
+  .mediaBackground{
+    position: absolute;
+    top:0;
+    left:0;
+    z-index:-1;
+    pointer-events: none;
+    & > *{
+      min-width: 100vw;
+      display:block;
+    }
+    img{
+      object-fit: cover;
     }
   }
 }
